# claude-plugins

./: .gitignore  README.md
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: hooks.rs  main.rs  zoom.rs
plugins/viewfinder/: .mcp.json
plugins/viewfinder/.claude-plugin/: plugin.json
plugins/viewfinder/config/: playwright-config.json  tracker.js
plugins/viewfinder/docs/: README.md
plugins/viewfinder/hooks/: hooks.json
plugins/viewfinder/scripts/: download-binaries.sh
plugins/viewfinder/skills/record/: SKILL.md
plugins/viewfinder/skills/setup/: SKILL.md
plugins/viewfinder/skills/stop/: SKILL.md
