[package]
name = "viewfinder-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Session orchestration CLI for the Viewfinder Claude Code plugin"

[[bin]]
name = "viewfinder"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
